# rust-threading-workshop

./: .gitignore  readme.adoc
part2-3/: build.sh  installation.adoc  installation_en.adoc  installation_en.html  readme.adoc  readme.html
part2-3/0-hello-world/: Cargo.toml
part2-3/2-errorhandling-middleware/: Cargo.toml
part2-3/3-tower-middleware/src/: lib.rs
part2-3/4-passing-state-middleware/tests/: dev.rs
part4/: readme.adoc
part4/0-scoped-threads-solution/: Cargo.toml
part4/0-scoped-threads-solution/src/: main.rs
part4/1-static-items-solution/: Cargo.toml
part4/2-rw-lock-solution/src/: lib.rs
part4/3-sync-mpsc/: Cargo.toml
part4/3-sync-mpsc/src/: main.rs
part4/4-sync-condvar/: Cargo.toml
part4/4-sync-condvar/src/: main.rs
part4/5-rayon-bit-reverse/: Cargo.toml
part4/6-weak-reference/: Cargo.toml
part4/6-weak-reference/src/: lib.rs
part4/rayon-bit-reverse/src/: main.rs
part4/rw-lock-solution/: Cargo.toml
part4/static-items-solution/src/: lib.rs
seminar/: build.sh  installation.adoc  installation.html  readme.adoc
seminar/1-fast-feedback/: Cargo.toml
seminar/1-fast-feedback/src/: main.rs
seminar/2-errorhandling-middleware/src/: main.rs
seminar/2-errorhandling-middleware/tests/: dev.rs
seminar/4-passing-state-middleware/: Cargo.toml
seminar/5-open-api/: Cargo.toml
seminar/6-grpc-with-tonic/: Cargo.toml
seminar/6-grpc-with-tonic/proto/: helloworld.proto
seminar/6-grpc-with-tonic/src/: server.rs
seminar/fast-feedback/: watchtest.sh
seminar/fast-feedback/tests/: dev.rs
seminar/open-api/src/: main.rs
seminar/passing-state-middleware/src/: main.rs
seminar/tower-middleware/: Cargo.toml
static-items-solution/src/: lib.rs
