[package]
name = "open-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
utoipa = { version = "4.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "4.0", features = ["axum"] }

