[package]
name = "tower-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1.34.0", features = ["rt", "macros", "rt-multi-thread"] }
futures-util = "0.3.29"
